--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -1,5 +1,8 @@
 ru-RU:
   number:
+    # Используется в number_with_delimiter()
+    # Также является установками по умолчанию для 'currency', 'percentage', 'precision', 'human'
+    #
     # Used in number_with_delimiter()
     # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
     format:
@@ -13,6 +16,9 @@ ru-RU:
     # Used in number_to_currency()
     currency:
       format:
+        # Формат отображения валюты и обозначение самой валюты
+        #
+        #
         # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
         format: "%n %u"
         unit: "руб."
@@ -45,6 +51,9 @@ ru-RU:
         delimiter: ""
         precision: 1
 
+  # Используется в хелперах distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
+  #
+  #
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
     distance_in_words:
@@ -100,14 +109,20 @@ ru-RU:
         many:  "больше {{count}} лет"
         other: "больше {{count}} лет"
 
+  # Используется в хелпере error_messages_for
   activerecord:
     errors:
       template:
+        # Заголовок сообщения об ошибке
         header:
           one:   "{{model}} не удалось сохранить из-за 1 ошибки"
           few:   "{{model}} не удалось сохранить из-за {{count}} ошибок"
           many:  "{{model}} не удалось сохранить из-за {{count}} ошибок"
           other: "{{model}} не удалось сохранить из-за {{count}} ошибок"
+
+        # Первый параграф сообщения об ошибке. Можно использовать макрос {{count}}
+        #
+        #
         # The variable :count is also available
         body: "Проблемы возникли со следующими полями:"
 
