--- a/lib/russian/locale/activerecord.yml
+++ b/lib/russian/locale/activerecord.yml
@@ -24,20 +24,20 @@ ru-RU:
         empty: "не может быть пустым"
         blank: "не может быть пустым"
         too_long:
-          one:   "слишком большой длины (допустимая длина - менее 1 символа)"
-          few:   "слишком большой длины (допустимая длина - менее {{count}} символов)"
-          many:  "слишком большой длины (допустимая длина - менее {{count}} символов)"
-          other: "слишком большой длины (допустимая длина - менее {{count}} символов)"
+          one:   "слишком большой длины (не может быть больше чем 1 символ)"
+          few:   "слишком большой длины (не может быть больше чем {{count}} символа)"
+          many:  "слишком большой длины (не может быть больше чем {{count}} символов)"
+          other: "слишком большой длины (не может быть больше чем {{count}} символа)"
         too_short:
-          one:   "недостаточной длины (допустимая длина - более 1 символа)"
-          few:   "недостаточной длины (допустимая длина - более {{count}} символов)"
-          many:  "недостаточной длины (допустимая длина - более {{count}} символов)"
-          other: "недостаточной длины (допустимая длина - более {{count}} символов)"
+          one:   "недостаточной длины (не может быть меньше 1 символа)"
+          few:   "недостаточной длины (не может быть меньше {{count}} символов)"
+          many:  "недостаточной длины (не может быть меньше {{count}} символов)"
+          other: "недостаточной длины (не может быть меньше {{count}} символов)"
         wrong_length:
-          one:   "неверной длины (допустимая длина - ровно 1 символ)"
-          few:   "неверной длины (допустимая длина - ровно {{count}} символа)"
-          many:  "неверной длины (допустимая длина - ровно {{count}} символов)"
-          other: "неверной длины (допустимая длина - ровно {{count}} символа)"
+          one:   "неверной длины (может быть длиной ровно 1 символ)"
+          few:   "неверной длины (может быть длиной ровно {{count}} символа)"
+          many:  "неверной длины (может быть длиной ровно {{count}} символов)"
+          other: "неверной длины (может быть длиной ровно {{count}} символа)"
         taken: "уже существует"
         not_a_number: "не является числом"
         greater_than: "может иметь значение большее {{count}}"
