Note about translation howto

--- a/README.textile
+++ b/README.textile
@@ -115,6 +115,10 @@ h2. Отличия от стандартной библиотеки I18n
 
 h1. Справочник
 
+h2. Примеры и справка по переводам (I18n)
+
+Небольшую справку по переводам (I18n) и пример того, как можно переводить имена моделей, атрибутов, и многие другие вещи, определенные в Rails или I18n, можно посмотреть в директории @lib/russian/locale@. Там находятся файлы переводов, которые используются в Russian, со всеми комментариями.
+
 h2. Вспомогательные методы модуля Russian
 
 <pre></code>
