More generic error message for error_messages_for header.

--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -115,10 +115,10 @@ ru-RU:
       template:
         # Заголовок сообщения об ошибке
         header:
-          one:   "{{model}} не удалось сохранить из-за 1 ошибки"
-          few:   "{{model}} не удалось сохранить из-за {{count}} ошибок"
-          many:  "{{model}} не удалось сохранить из-за {{count}} ошибок"
-          other: "{{model}} не удалось сохранить из-за {{count}} ошибок"
+          one:   "{{model}}: сохранение не удалось из-за 1 ошибки"
+          few:   "{{model}}: сохранение не удалось из-за {{count}} ошибок"
+          many:  "{{model}}: сохранение не удалось из-за {{count}} ошибок"
+          other: "{{model}}: сохранение не удалосьиз-за {{count}} ошибок"
 
         # Первый параграф сообщения об ошибке. Можно использовать макрос {{count}}
         #
