1. Fixed paddings in activerecord translation -- was not an error, there are different contexts. 2. Lots of documentation for AR translations.

--- a/lib/russian/locale/activerecord.yml
+++ b/lib/russian/locale/activerecord.yml
@@ -47,20 +47,44 @@ ru-RU:
         less_than_or_equal_to: "может иметь значение меньшее или равное {{count}}"
         odd: "может иметь лишь четное значение"
         even: "может иметь лишь нечетное значение"
-        # Можно добавить собственные сообщения об ошибке тут или в конкексте модели/атрибутов (ниже)
+        # Можно добавить собственные сообщения об ошибке тут или задавать их в контексте атрибута.
         #
         #
         # Append your own errors here or at the model/attributes scope.
+        #
+        #
+        # Например,
+        #   models:
+        #     user:
+        #       # Задает сообщение об ошибке (пустое значение) для атрибутов модели User
+        #       # Можно использовать макросы {{model}}, {{attribute}}.
+        #       # Также можно использовать сообщения, начинающиеся с "^" -- в этом случае
+        #       # в списке ошибок валидации перед конкретным сообщением не будет выводиться имя атрибута.
+        #       blank: "собственное сообщение об ошибке (пустой атрибут) для модели {{model}} и атрибута {{attribute}}"
+        #       attributes:
+        #         # Также можно задавать собственные сообщения об ошибке для конкретных атрибутов модели.
+        #         # Ниже определим собственное сообщение об ошибке для атрибута name модели User.
+        #         name:
+        #           blank: "Атрибут {{attribute}} особенный -- у него свое сообщение об ошибке при пустом атрибуте"
 
-    models:
-      # Перегрузка названий моделей
-      #
-      #
-      # Overrides default messages
-      
-    attributes:
-      # Перегрузка сообщений атрибутов
-      #
-      #
-      # Overrides model and default messages.
+      models:
+        # Перевод названий моделей
+        #
+        # Например,
+        #   user: "Пользователь"
+        # переведет модель User как "Пользователь".
+        #
+        #
+        # Overrides default messages
+        
+      attributes:
+        # Перевод названий атрибутов моделей
+        #
+        # Например,
+        #   user:
+        #     name: "Имя"
+        # переведет атрибут name модели User как "Имя".
+        #
+        #
+        # Overrides model and default messages.
         
