Improved AR translations doc

--- a/lib/russian/locale/activerecord.yml
+++ b/lib/russian/locale/activerecord.yml
@@ -68,7 +68,7 @@ ru-RU:
         #           blank: "Атрибут {{attribute}} особенный -- у него свое сообщение об ошибке при пустом атрибуте"
 
       models:
-        # Перевод названий моделей
+        # Перевод названий моделей. Используется в Model.human_name().
         #
         # Например,
         #   user: "Пользователь"
@@ -78,7 +78,7 @@ ru-RU:
         # Overrides default messages
         
       attributes:
-        # Перевод названий атрибутов моделей
+        # Перевод названий атрибутов моделей. Используется в Model.human_attribute_name(attribute).
         #
         # Например,
         #   user:
