--- a/lib/russian/locale/activerecord.yml
+++ b/lib/russian/locale/activerecord.yml
@@ -24,17 +24,17 @@ ru-RU:
         empty: "не может быть пустым"
         blank: "не может быть пустым"
         too_long:
-          one:   "слишком большой длины (не может быть больше чем 1 символ)"
+          one:   "слишком большой длины (не может быть больше чем {{count}} символ)"
           few:   "слишком большой длины (не может быть больше чем {{count}} символа)"
           many:  "слишком большой длины (не может быть больше чем {{count}} символов)"
           other: "слишком большой длины (не может быть больше чем {{count}} символа)"
         too_short:
-          one:   "недостаточной длины (не может быть меньше 1 символа)"
+          one:   "недостаточной длины (не может быть меньше {{count}} символа)"
           few:   "недостаточной длины (не может быть меньше {{count}} символов)"
           many:  "недостаточной длины (не может быть меньше {{count}} символов)"
-          other: "недостаточной длины (не может быть меньше {{count}} символов)"
+          other: "недостаточной длины (не может быть меньше {{count}} символа)"
         wrong_length:
-          one:   "неверной длины (может быть длиной ровно 1 символ)"
+          one:   "неверной длины (может быть длиной ровно {{count}} символ)"
           few:   "неверной длины (может быть длиной ровно {{count}} символа)"
           many:  "неверной длины (может быть длиной ровно {{count}} символов)"
           other: "неверной длины (может быть длиной ровно {{count}} символа)"
