--- a/README.textile
+++ b/README.textile
@@ -191,6 +191,33 @@ h3. Хелперы
 
 Хелперы даты-времени получают ключ @:use_standalone_month_names@ для форсирования отображения отдельностоящего названия месяца ("Сентябрь" а не "сентября"). Такое имя месяца используется когда включен ключ @:use_standalone_month_names@ (для отдельностоящего @select_month@ он включается по умолчанию), либо когда есть ключ @:discard_day@.
 
+В Russian включен плагин i18n_label, который подставляет в форм-хелпер @label@ перевод атрибута из таблицы переводов I18n. Например:
+
+* в файле переводов:
+
+<pre><code>
+ru-RU:
+  activerecord:
+    attributes:
+      user:
+        name: "Имя"
+</code></pre>
+
+* во view:
+
+<pre><code>
+<% form_for @user do |f| %>
+  <%= f.label :name %>
+<% end %>
+</code></pre>
+
+Даст:
+
+<pre><code>
+<label for="user_name">Имя</label>
+</code></pre>
+
+
 h3. Валидация
 
 Обработка ошибок в ActiveRecord перегружается -- в Russian включен популярный плагин custom_error_message, с помощью которого можно переопределять стандартное отображение сообщений об ошибках. Так, например,
