Important: Russian pluralization rules fixed, CLDR defines in x..y only for integers. Also Russian.p supports 4rd argument for non-integers.

--- a/README.textile
+++ b/README.textile
@@ -177,6 +177,8 @@ Russian.p(2, "вещь", "вещи", "вещей")
 => "вещи"
 Russian.p(10, "вещь", "вещи", "вещей")
 => "вещей"
+Russian.p(3.14, "вещь", "вещи", "вещей", "вещи") # последний вариант используется для дробных величин
+=> "вещи"
 </code></pre>
 
 -- упрощенная (без использования хешей I18n) плюрализация для русского языка
