--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 TODO
 ====
 * check Unicode CLDR to ensure all datetime formats are correct
-* examples of custom translations, AR models/attributes/messages translations
 * refactor Advanced backend localize method (looks ugly)
-* Countries list
+* refactor DateTimeSelector#translated_month_names
+* Countries list (not in Rails I18n)
 
 Questionable
 ============
