--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ TODO
 * check Unicode CLDR to ensure all datetime formats are correct
 * refactor Advanced backend localize method (looks ugly)
 * refactor DateTimeSelector#translated_month_names
+* stuff from english gem
 * Countries list (not in Rails I18n)
 
 Questionable
