--- a/TODO
+++ b/TODO
@@ -12,3 +12,4 @@ Questionable
 * integration spec coverage for actionview locale
 * integration spec coverage for activerecord locale
 * integration spec coverage for activesupport locale
+* integration specs for rails hacks
