NB: Changed Russian.locale to :'ru' instead of :'ru-RU'. Updated I18n to 0.1.1 (locale changes). 0.0.9

--- a/README.textile
+++ b/README.textile
@@ -89,7 +89,7 @@ h1. Использование
 При инициализации:
 
 * заменяется бэкэнд I18n со стандартного на собственный бекэнд Russian (@I18n::Backend::Advanced@)
-* _NB:_ локаль русского языка (@ru-RU@) становится локалью по умолчанию
+* _NB:_ локаль русского языка (@:'ru'@) становится локалью по умолчанию
 * загружаются все файлы переводов, в том числе переводы для Rails.
 
 После этого можно использовать все стандартные функции библиотеки I18n, пользоваться измененным функционалом для лучшей поддержки русского языка, или использовать хелперы модуля Russian для еще более простой работы с русским языком.
@@ -125,7 +125,7 @@ Russian.locale
 Russian::LOCALE
 </code></pre>
 
--- возвращает локаль русского языка (@:'ru-RU'@).
+-- возвращает локаль русского языка (@:'ru'@).
 
 <pre><code>
 Russian::i18n_backend_class
@@ -210,7 +210,7 @@ h3. Хелперы
 * в файле переводов:
 
 <pre><code>
-ru-RU:
+ru:
   activerecord:
     attributes:
       user:
