number_to_human_size() translations: using edge format (Rails 2.3)

--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -49,7 +49,25 @@ ru:
         # separator: 
         delimiter: ""
         precision: 1
-      storage_units: [байт, КБ, МБ, ГБ, ТБ]
+      
+      # Rails 2.2
+      # storage_units: [байт, КБ, МБ, ГБ, ТБ]
+      
+      # Rails 2.3
+      storage_units:
+        # Storage units output formatting.
+        # %u is the storage unit, %n is the number (default: 2 MB)
+        format: "%n %u"
+        units:
+          byte:
+            one:   "байт"
+            few:   "байта"
+            many:  "байт"
+            other: "байта"
+          kb: "КБ"
+          mb: "МБ"
+          gb: "ГБ"
+          tb: "ТБ"
 
   # Используется в хелперах distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   #
