--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+=== master
+
+* number_to_human_size() translations: using edge format (Rails 2.3)
+* i18n gem updated (0.1.2)
+
+* Перевод для number_to_human_size(): испольуется форматирование из edge (Rails 2.3)
+* Обновлен gem i18n до версии 0.1.2
+
 === 0.1.3 - 27.12.2008
 
 * Add support.array.words_connector/two_words_connector/last_word_connector (Array#to_sentence) (Rails Edge)
