--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,12 @@
-=== master
+=== 0.2.0 - 16.03.2009
 
 * number_to_human_size() translations: using edge format (Rails 2.3)
 * i18n gem updated (0.1.3)
+* Rails 2.3 compat
 
 * Перевод для number_to_human_size(): испольуется форматирование из edge (Rails 2.3)
 * Обновлен gem i18n до версии 0.1.3
+* Совместимость с Rails 2.3
 
 === 0.1.3 - 27.12.2008
 
