Rails 2.3.4 ActiveRecord::Errors support [Alexander Semyonov/Yaroslav Markin]

--- a/README.textile
+++ b/README.textile
@@ -233,7 +233,9 @@ ru:
 
 h3. Валидация
 
-Обработка ошибок в ActiveRecord перегружается -- в Russian включен популярный плагин custom_error_message, с помощью которого можно переопределять стандартное отображение сообщений об ошибках. Так, например,
+До версии Rails 2.3.4 форматирование сообщений об ошибках не было гибким, и для нормального отображения ошибок на русском языке приходилось испольковать хаки. Если вы используете Rails 2.3.4 и выше, пропустите этот пункт (используйте ключ переводов @activerecord.errors.full_messages.format@).
+
+Для Rails 2.3.3 и ниже обработка ошибок в ActiveRecord перегружается -- в Russian включен популярный плагин custom_error_message, с помощью которого можно переопределять стандартное отображение сообщений об ошибках. Так, например,
 
 @validates_acceptance_of :accepted_terms, :message => 'нужно принять соглашение'@
 
