--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
 === master
 
+* Rails 2.3.4 compat (ActiveRecord::Error) and deprecation warning (use errors.full_messages.format from now on) [Alexander Semyonov/Yaroslav Markin]
 * transliteration: Ы now transforms to Y [Alex Fortuna]
 
+* Совместимость с Rails 2.3.4 (ActiveRecord::Error) и устаревшее форматирование через "^" (теперь надо использовать errors.full_messages.format) [Alexander Semyonov/Yaroslav Markin]
 * транслитерация: Ы теперь превращается в Y [Alex Fortuna]
 
 === 0.2.0 - 16.03.2009
