--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 0.2.2 - 17.09.2008
+
+* Fix ^-prefixed error messages handling on Rails 2.3.4
+
+* Для Rails 2.3.4 исправлена работа сообщений валидаций, начинающихся с "^"
+
 === 0.2.1 - 5.09.2009
 
 * Rails 2.3.4 compat (ActiveRecord::Error) and deprecation warning (use errors.full_messages.format from now on) [Alexander Semyonov/Yaroslav Markin]
